--- a/ciyun_2019-nCoV.html
+++ b/ciyun_2019-nCoV.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
 
-    <title>ECharts</title>
+    <title>2019-nCoV词云</title>
 
 
     <!-- 引入 echarts.js -->
@@ -23,7 +23,7 @@
 
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 
-    <div id="main" style="width:100%;height:100%;"></div>
+    <div id="main" style="width:800;height:500;"></div>
 
     <script type="text/javascript">
 
@@ -45,7 +45,7 @@ option = {
     },
     series: [{
         type: "wordCloud",
-        gridSize: 6,
+        gridSize: 3,
         shape: 'diamond',
         sizeRange: [12, 50],
         width: 800,
