--- a/ciyun_2019-nCoV.html
+++ b/ciyun_2019-nCoV.html
@@ -23,7 +23,7 @@
 
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 
-    <div id="main" style="width:800;height:500;"></div>
+    <div id="main" style="width:800px;height:500px;"></div>
 
     <script type="text/javascript">
 
