--- a/ciyun_2019-nCoV.html
+++ b/ciyun_2019-nCoV.html
@@ -45,9 +45,9 @@ option = {
     },
     series: [{
         type: "wordCloud",
-        gridSize: 3,
+        gridSize:11,
         shape: 'diamond',
-        sizeRange: [12, 50],
+        sizeRange: [18, 50],
         width: 800,
         height: 500,
         textStyle: {
@@ -65,71 +65,266 @@ option = {
                 shadowColor: '#333'
             }
         },
-        data: [{name: " 钟南山,",value: 151},
-{name: " 医院,",value: 7041},
-{name: " 医疗,",value: 1354},
-{name: " 病人,",value: 1817},
-{name: " 医务工作者,",value: 43},
-{name: " 治疗,",value: 716},
-{name: " 医生,",value: 2220},
-{name: " 护士,",value: 535},
-{name: " 确诊,",value: 1485},
-{name: " 疑似,",value: 750},
-{name: " 治愈,",value: 161},
-{name: " 患者,",value: 1875},
-{name: " 死亡,",value: 315},
-{name: " 隔离,",value: 1803},
-{name: " 冠状病毒,",value: 1367},
-{name: " 肺炎,",value: 2830},
-{name: " 咳嗽,",value: 211},
-{name: " 发烧,",value: 329},
-{name: " 发热,",value: 1142},
-{name: " 感染,",value: 2223},
-{name: " 湖北,",value: 1680},
-{name: " 广州,",value: 177},
-{name: " 大理,",value: 44},
-{name: " 河南,",value: 131},
-{name: " 武汉,",value: 7605},
-{name: " 浙江,",value: 61},
-{name: " 四川,",value: 40},
-{name: " 上海,",value: 330},
-{name: " 社会,",value: 668},
-{name: " 人民日报,",value: 33},
-{name: " 辟谣,",value: 14},
-{name: " 微博,",value: 361},
-{name: " 军队,",value: 12},
-{name: " 政府,",value: 779},
-{name: " 华南海鲜市场,",value: 275},
-{name: " 蝙蝠,",value: 66},
-{name: " 病毒,",value: 3457},
-{name: " 运气,",value: 20},
-{name: " 管理,",value: 749},
-{name: " 中央,",value: 86},
-{name: " 专利,",value: 185},
-{name: " 求助,",value: 276},
-{name: " 捐款,",value: 122},
-{name: " 控制,",value: 274},
-{name: " 公布,",value: 252},
-{name: " 拐点,",value: 164},
-{name: " 火神山,",value: 242},
-{name: " 雷神山,",value: 80},
-{name: " 红十字,",value: 477},
-{name: " 协和,",value: 284},
-{name: " 封城,",value: 787},
-{name: " 加油,",value: 99},
-{name: " 信任,",value: 39},
-{name: " 良心,",value: 11},
-{name: " 无奈,",value: 57},
-{name: " 致敬,",value: 11},
-{name: " 信息,",value: 1100},
-{name: " 热干面,",value: 12},
-{name: " 丁香园,",value: 13},
-{name: " 双黄连,",value: 169},
-{name: " 口罩,",value: 3710},
-{name: " 救,",value: 1243},
-{name: " 药,",value: 1895},
-{name: " 中国,",value: 1671},
-{name: " 疫情,",value: 4035}
+        data: [{
+                name: " 钟南山,",
+                value: 151
+            },
+            {
+                name: " 医院,",
+                value: 7041
+            },
+            {
+                name: " 医疗,",
+                value: 1354
+            },
+            {
+                name: " 病人,",
+                value: 1817
+            },
+            {
+                name: " 医务工作者,",
+                value: 43
+            },
+            {
+                name: " 治疗,",
+                value: 716
+            },
+            {
+                name: " 医生,",
+                value: 2220
+            },
+            {
+                name: " 护士,",
+                value: 535
+            },
+            {
+                name: " 确诊,",
+                value: 1485
+            },
+            {
+                name: " 疑似,",
+                value: 750
+            },
+            {
+                name: " 治愈,",
+                value: 161
+            },
+            {
+                name: " 患者,",
+                value: 1875
+            },
+            {
+                name: " 死亡,",
+                value: 315
+            },
+            {
+                name: " 隔离,",
+                value: 1803
+            },
+            {
+                name: " 冠状病毒,",
+                value: 1367
+            },
+            {
+                name: " 肺炎,",
+                value: 2830
+            },
+            {
+                name: " 咳嗽,",
+                value: 211
+            },
+            {
+                name: " 发烧,",
+                value: 329
+            },
+            {
+                name: " 发热,",
+                value: 1142
+            },
+            {
+                name: " 感染,",
+                value: 2223
+            },
+            {
+                name: " 湖北,",
+                value: 1680
+            },
+            {
+                name: " 广州,",
+                value: 177
+            },
+            {
+                name: " 大理,",
+                value: 44
+            },
+            {
+                name: " 河南,",
+                value: 131
+            },
+            {
+                name: " 武汉,",
+                value: 7605
+            },
+            {
+                name: " 浙江,",
+                value: 61
+            },
+            {
+                name: " 四川,",
+                value: 40
+            },
+            {
+                name: " 上海,",
+                value: 330
+            },
+            {
+                name: " 社会,",
+                value: 668
+            },
+            {
+                name: " 人民日报,",
+                value: 33
+            },
+            {
+                name: " 辟谣,",
+                value: 14
+            },
+            {
+                name: " 微博,",
+                value: 361
+            },
+            {
+                name: " 军队,",
+                value: 12
+            },
+            {
+                name: " 政府,",
+                value: 779
+            },
+            {
+                name: " 华南海鲜市场,",
+                value: 275
+            },
+            {
+                name: " 蝙蝠,",
+                value: 66
+            },
+            {
+                name: " 病毒,",
+                value: 3457
+            },
+            {
+                name: " 运气,",
+                value: 20
+            },
+            {
+                name: " 管理,",
+                value: 749
+            },
+            {
+                name: " 中央,",
+                value: 86
+            },
+            {
+                name: " 专利,",
+                value: 185
+            },
+            {
+                name: " 求助,",
+                value: 276
+            },
+            {
+                name: " 捐款,",
+                value: 122
+            },
+            {
+                name: " 控制,",
+                value: 274
+            },
+            {
+                name: " 公布,",
+                value: 252
+            },
+            {
+                name: " 拐点,",
+                value: 164
+            },
+            {
+                name: " 火神山,",
+                value: 242
+            },
+            {
+                name: " 雷神山,",
+                value: 80
+            },
+            {
+                name: " 红十字,",
+                value: 477
+            },
+            {
+                name: " 协和,",
+                value: 284
+            },
+            {
+                name: " 封城,",
+                value: 787
+            },
+            {
+                name: " 加油,",
+                value: 99
+            },
+            {
+                name: " 信任,",
+                value: 39
+            },
+            {
+                name: " 良心,",
+                value: 11
+            },
+            {
+                name: " 无奈,",
+                value: 57
+            },
+            {
+                name: " 致敬,",
+                value: 11
+            },
+            {
+                name: " 信息,",
+                value: 1100
+            },
+            {
+                name: " 热干面,",
+                value: 12
+            },
+            {
+                name: " 丁香园,",
+                value: 13
+            },
+            {
+                name: " 双黄连,",
+                value: 169
+            },
+            {
+                name: " 口罩,",
+                value: 3710
+            },
+            {
+                name: " 救,",
+                value: 1243
+            },
+            {
+                name: " 药,",
+                value: 1895
+            },
+            {
+                name: " 中国,",
+                value: 1671
+            },
+            {
+                name: " 疫情,",
+                value: 4035
+            }
         ],
     }]
 
